--- a/proyekPBO/src/main/KegiatanFrame.form
+++ b/proyekPBO/src/main/KegiatanFrame.form
@@ -157,12 +157,13 @@
         <Component class="javax.swing.JComboBox" name="kegiatanComboBox">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="5">
+              <StringArray count="6">
                 <StringItem index="0" value="Pilih daftar kegiatan..."/>
                 <StringItem index="1" value="Pelatihan Terbuka Renang"/>
                 <StringItem index="2" value="Pelatihan Terbuka RC"/>
                 <StringItem index="3" value="Pendakian Umum"/>
-                <StringItem index="4" value=" "/>
+                <StringItem index="4" value="PDT (Pembangunan Desa Tertinggal)"/>
+                <StringItem index="5" value=" "/>
               </StringArray>
             </Property>
           </Properties>
